Removed the (so far unsupported) possibility to create binary variables. Fixed open browser problem on Linux.